Bug 191920 - Updating href on textPath doesn't update its rendering
Summary: Updating href on textPath doesn't update its rendering
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords: InRadar
Depends on:
Blocks: 174977
  Show dependency treegraph
 
Reported: 2018-11-22 21:36 PST by Ryosuke Niwa
Modified: 2018-11-23 14:07 PST (History)
9 users (show)

See Also:


Attachments
Fixes the bug (3.57 KB, patch)
2018-11-22 21:38 PST, Ryosuke Niwa
dino: review+
Details | Formatted Diff | Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2 (2.47 MB, application/zip)
2018-11-22 23:46 PST, EWS Watchlist
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2018-11-22 21:36:07 PST
When textPath is associated with a given path, updating its href doesn't update the rendering.
Comment 1 Ryosuke Niwa 2018-11-22 21:38:39 PST
Created attachment 355497 [details]
Fixes the bug
Comment 2 EWS Watchlist 2018-11-22 23:45:58 PST
Comment on attachment 355497 [details]
Fixes the bug

Attachment 355497 [details] did not pass ios-sim-ews (ios-simulator-wk2):
Output: https://webkit-queues.webkit.org/results/10115787

New failing tests:
imported/w3c/web-platform-tests/webrtc/simplecall-no-ssrcs.https.html
Comment 3 EWS Watchlist 2018-11-22 23:46:00 PST
Created attachment 355498 [details]
Archive of layout-test-results from ews122 for ios-simulator-wk2

The attached test failures were seen while running run-webkit-tests on the ios-sim-ews.
Bot: ews122  Port: ios-simulator-wk2  Platform: Mac OS X 10.13.6
Comment 4 Ryosuke Niwa 2018-11-23 00:15:55 PST
Not sure what's up with iOS EWS but I'm pretty certain the test failure isn't anything to do with my patch.
Comment 5 Ryosuke Niwa 2018-11-23 13:59:56 PST
Thanks for the reviews!
Comment 6 Ryosuke Niwa 2018-11-23 14:06:36 PST
Committed r238464: <https://trac.webkit.org/changeset/238464>
Comment 7 Radar WebKit Bug Importer 2018-11-23 14:07:25 PST
<rdar://problem/46224453>