Updating href on textPath doesn't update its rendering https://bugs.webkit.org/show_bug.cgi?id=191920

Reviewed by Dean Jackson.

Source/WebCore:

Fixed the bug by invalidating the RenderSVGResource in SVGTextPathElement::svgAttributeChanged
in addition to updating the pending resources.

Test: svg/text/textpath-reference-update.html

* svg/SVGTextPathElement.cpp:
(WebCore::SVGTextPathElement::svgAttributeChanged):

LayoutTests:

Added a ref test.

* svg/text/textpath-reference-update-expected.html: Added.
* svg/text/textpath-reference-update.html: Added.


Canonical link: https://commits.webkit.org/206633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238464 268f45cc-cd09-0410-ab3c-d52691b4dbfc